# archiver

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  readme.md
.github/workflows/: cmake.yml
archiver/: CMakeLists.txt  archiver.cpp  archiver.h
archiver/tests/: archiver_tests.cpp
archiver/tests/mock/: a
benchmarks/: MAIN  linux_exe  lorem  run_benchmarks.sh
priority_queue/: CMakeLists.txt  priority_queue.cpp  priority_queue.h
priority_queue/tests/: priority_queue_tests.cpp
reader/: CMakeLists.txt  reader.cpp  reader.h
reader/tests/: reader_tests.cpp
trie/: CMakeLists.txt  trie.cpp  trie.h
trie/tests/: trie_tests.cpp
writer/: CMakeLists.txt  writer.cpp  writer.h
writer/tests/: writer_tests.cpp
